Basic User Interface
Basic user interface with all filters and etc. I'm about to convert the stuff to firebase after this.

--- a/app/src/main/res/layout/fragment_editor_event.xml
+++ b/app/src/main/res/layout/fragment_editor_event.xml
@@ -70,7 +70,7 @@
                         android:clickable="true"
                         android:focusable="true"
                         android:gravity="center_vertical"
-                        android:text="@string/field_schedule"
+                        android:text="@string/field_category"
                         android:textAppearance="@style/Fokus.TextAppearance.Label.Large" />
 
                     <RadioGroup
