--- a/app/src/main/res/layout/fragment_editor_subject.xml
+++ b/app/src/main/res/layout/fragment_editor_subject.xml
@@ -75,7 +75,7 @@
                 android:gravity="center"
                 android:orientation="horizontal">
 
-                <androidx.appcompat.widget.AppCompatImageView
+                <!--<androidx.appcompat.widget.AppCompatImageView
                     android:layout_width="@dimen/icon_dimen"
                     android:layout_height="@dimen/icon_dimen"
                     android:layout_marginHorizontal="16dp"
@@ -90,7 +90,7 @@
                     android:hint="@string/field_instructor"
                     android:inputType="textCapWords"
                     android:textAppearance="@style/Fokus.TextAppearance.Label.Large"
-                    android:background="@android:color/transparent"/>
+                    android:background="@android:color/transparent"/>-->
 
             </LinearLayout>
 
@@ -123,7 +123,7 @@
                 android:orientation="vertical"
                 android:animateLayoutChanges="true">
 
-                <LinearLayout
+                <!--<LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -181,7 +181,7 @@
                         android:drawablePadding="@dimen/container_padding_regular"
                         android:gravity="center_vertical"/>
 
-                </com.google.android.material.card.MaterialCardView>
+                </com.google.android.material.card.MaterialCardView>-->
 
             </LinearLayout>
 
