--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -91,13 +91,13 @@
 
     </androidx.core.widget.NestedScrollView>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/actionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/activity_padding"
         android:contentDescription="@string/button_add"
-        app:srcCompat="@drawable/ic_outline_add_24" />
+        app:srcCompat="@drawable/ic_outline_add_24" />-->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
