--- a/app/src/main/res/menu/menu_tasks.xml
+++ b/app/src/main/res/menu/menu_tasks.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
+    <!--<item
         android:title="@string/menu_sort"
         android:icon="@drawable/ic_hero_sort_ascending_24"
         app:showAsAction="never">
@@ -40,7 +40,7 @@
             </item>
         </menu>
 
-    </item>
+    </item>-->
 
     <item
         android:title="@string/menu_filter"
@@ -60,12 +60,16 @@
                 android:id="@+id/action_filter_finished"
                 android:title="@string/filter_options_finished_tasks"
                 android:icon="@drawable/ic_outline_check_24"/>
+            <item
+                android:id="@+id/action_filter_date"
+                android:title="By date"
+                android:icon="@drawable/ic_outline_event_24"/>
         </menu>
     </item>
 
-    <item
+    <!--<item
         android:id="@+id/action_archived"
         android:title="@string/menu_archived"
-        android:icon="@drawable/ic_outline_archive_24"/>
+        android:icon="@drawable/ic_outline_archive_24"/>-->
 
 </menu>
