--- a/app/src/main/res/layout/layout_navigation_header.xml
+++ b/app/src/main/res/layout/layout_navigation_header.xml
@@ -8,6 +8,6 @@
     android:layout_marginStart="@dimen/container_padding_medium"
     android:layout_marginEnd="@dimen/container_padding_medium"
     android:layout_marginBottom="@dimen/container_padding_regular"
-    android:text="@string/app_name"
+    android:text="Hi! Welcome to ClockWork :)"
     android:textColor="?attr/colorOnSurfaceVariant"
     android:textAppearance="@style/Fokus.TextAppearance.Title.Medium" />
